--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.75",
     "@types/react-dom": "^17.0.11",
+    "css-loader": "^6.9.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
