--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.75",
     "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^9.0.8",
     "css-loader": "^6.9.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
