--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +49,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "cypress": "^13.6.4",
+    "eslint-plugin-cypress": "^2.15.1",
     "jest": "^27.5.1",
     "react-test-renderer": "^17.0.2"
   }
